# openzeppelin-monitor

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile.development  Dockerfile.production  INTHEWILD.md  Makefile.toml  README.md  docker-compose.yaml  netlify.toml  osv-scanner.toml  rust-toolchain.toml  rustfmt.toml  setup_and_run.sh
.githooks/: commit-msg  pre-push
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/prepare/: action.yml
.github/release-please/: .config.json
.github/workflows/: ci.yaml  cla.yml  codeql.yml  pr-title.yaml  rc.yml  release-bins.yml  release-docker.yml  release-docs.yml  release-please.yml  release-sbom.yml  rust-clippy.yml  rust-docs-url.yml  scorecard.yml  semgrep.yml  test-bins.yml  update-lock.yaml
cmd/prometheus/dashboards/: dashboard.yml
config/filters/: evm_filter_block_number.js  evm_filter_block_number.py  evm_filter_block_number.sh  stellar_filter_block_number.js  stellar_filter_block_number.py  stellar_filter_block_number.sh
config/monitors/: evm_transfer_usdc.json.example  stellar_swap_dex.json.example  stellar_transfer_usdc.json.example
config/networks/: ethereum_mainnet.json.example  stellar_mainnet.json.example  stellar_testnet.json.example
config/triggers/: discord_notifications.json.example  email_notifications.json.example  slack_notifications.json.example  telegram_notifications.json.example  webhook_notifications.json.example
docs/: README.md  antora-playbook.yml  antora.yml  architecture.mdx  contribution.mdx  index.mdx  package-lock.json  package.json  project-structure.mdx  quickstart.mdx  rpc.mdx
docs/1.0.x/: error.mdx
docs/1.1.x/: changelog.mdx
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: contribution.adoc  error.adoc  index.adoc  project-structure.adoc  quickstart.adoc  rpc.adoc  scripts.adoc  structure.adoc
docs/supplemental-ui/partials/: header-content.hbs
examples/config/monitors/: midnight_testnet_bulletin_post.json  stellar_swap_dex.json
examples/config/networks/: arbitrum_nova.json  arbitrum_one.json  arbitrum_sepolia.json  avalanche_c_chain.json  avalanche_fuji.json  base.json  base_sepolia.json  bsc_mainnet.json  bsc_testnet.json  celo_alfajores.json  celo_mainnet.json  ethereum_mainnet.json  ethereum_sepolia.json  linea_mainnet.json  linea_testnet.json  mantle_mainnet.json  mantle_testnet.json  midnight_testnet.json  optimism_mainnet.json  optimism_sepolia.json  polkadot_westend.json  polygon_amoy.json  polygon_mainnet.json  scroll_mainnet.json  scroll_sepolia.json  sonic_mainnet.json  sonic_testnet.json  stellar_mainnet.json  stellar_testnet.json  unichain_sepolia.json  zksync_era_mainnet.json  zksync_era_sepolia.json
examples/config/triggers/: discord_notifications.json  email_notifications.json  slack_notifications.json  telegram_notifications.json  webhook_notifications.json
examples/config/triggers/scripts/: custom_notification.py
rust-docs/: netlify.toml
scripts/: rust_antora.sh  validate_network_config.sh
src/: lib.rs  main.rs
src/bootstrap/: mod.rs
src/models/: mod.rs
src/models/blockchain/: mod.rs
src/models/blockchain/evm/: block.rs  mod.rs  monitor.rs  receipt.rs  transaction.rs
src/models/blockchain/midnight/: block.rs  event.rs  mod.rs  monitor.rs  transaction.rs
src/models/blockchain/stellar/: block.rs  event.rs  mod.rs  monitor.rs  transaction.rs
src/models/config/: error.rs  mod.rs  monitor_config.rs  network_config.rs  trigger_config.rs
src/models/core/: mod.rs  monitor.rs  network.rs  trigger.rs
src/models/security/: error.rs  secret.rs
src/repositories/: error.rs  mod.rs  monitor.rs  network.rs  trigger.rs
src/services/: mod.rs
src/services/blockchain/: client.rs  error.rs  factory.rs  mod.rs  pool.rs
src/services/blockchain/clients/: evm.rs  mod.rs  stellar.rs
src/services/blockchain/transports/: endpoint_manager.rs  error.rs  horizon.rs  http.rs  mod.rs  stellar.rs  web3.rs  ws.rs
src/services/blockwatcher/: error.rs  mod.rs  service.rs  storage.rs  tracker.rs
src/services/filter/: error.rs  filter_match.rs  mod.rs
src/services/filter/expression/: ast.rs
src/services/filter/filters/: evm.rs  mod.rs  stellar.rs
src/services/filter/helpers/: evm.rs  mod.rs  stellar.rs
src/services/notification/: discord.rs  email.rs  error.rs  mod.rs  payload_builder.rs  pool.rs  script.rs  slack.rs  telegram.rs  webhook.rs
src/services/trigger/: error.rs  mod.rs  service.rs
src/services/trigger/script/: error.rs  executor.rs
src/utils/: error.rs  expression.rs  http.rs  logging.rs  mod.rs  parsing.rs  retry.rs
src/utils/logging/: error.rs  mod.rs
src/utils/macros/: deserialization.rs
src/utils/metrics/: README.md  mod.rs  server.rs
src/utils/monitor/: error.rs  execution.rs
src/utils/script/: error.rs  executor.rs  factory.rs  mod.rs  validation.rs
src/utils/tests/: http.rs  mod.rs
src/utils/tests/builders/: network.rs  trigger.rs
tests/: filter.rs  integration.rs  mod.rs  properties.rs
tests/filter/: common.rs  evm.rs  stellar.rs
tests/fixtures/evm/monitors/: monitor.json
tests/integration/blockchain/: pool.rs
tests/integration/blockwatcher/: service.rs
tests/integration/bootstrap/: main.rs
tests/integration/filter/: evm.rs  stellar.rs
tests/integration/filters/: common.rs
tests/integration/mocks/: clients.rs  logging.rs  mod.rs  models.rs  repositories.rs  services.rs  subxt.rs  transports.rs
tests/integration/monitor/: execution.rs
tests/integration/notifications/: discord.rs  email.rs  script.rs  slack.rs  telegram.rs  webhook.rs
tests/mocks/: clients.rs  mod.rs  repositories.rs
tests/properties/: strategies.rs
tests/properties/filters/: evm.rs  stellar.rs
tests/properties/matcher/: evm.rs
tests/properties/notifications/: discord.rs  email.rs  slack.rs  telegram.rs  webhook.rs
tests/properties/repositories/: monitor.rs  network.rs  trigger.rs
tests/properties/utils/: executor.rs
(+550 files in other folders)
