[package]
name = "openzeppelin-monitor"
version = "1.1.0"
edition = "2021"
rust-version = "1.90"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = 'abort'

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = 'unwind'

[dependencies]
actix-rt = "2.2.0"
actix-web = "4"
alloy = { version = "1.0.41", features = ["full"] }
alloy-dyn-abi = "1.4.1"  # Force version to address GHSA-pgp9-98jm-wwq2 (High severity vulnerability)
anyhow = { version = "1.0.97", features = ["std"] }
async-trait = "0.1"
backon = "1.5.1"
base64 = "0.22"
byte-unit = "5.1.6"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive"] }
cron = "0.15.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
futures = "0.3"
futures-util = "0.3.31"
glob = "0.3"
hex = "0.4"
hmac = "0.12.0"
itertools = "0.12.0"                                                                                                                                     # Needed for midnight-node linting errors
lazy_static = "1.5"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
libc = "0.2"
log = "0.4"
midnight-ledger = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-ledger", tag = "ledger-6.1.0-alpha.3" }
midnight-base-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-base-crypto", tag = "ledger-6.1.0-alpha.3" }
midnight-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-transient-crypto", tag = "ledger-6.1.0-alpha.3" }
midnight-storage = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-storage", tag = "ledger-6.1.0-alpha.3" }
midnight-serialize = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "ledger-6.1.0-alpha.3" }
midnight-coin-structure = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-coin-structure", tag = "ledger-6.1.0-alpha.3" }
midnight-zswap = { git = "https://github.com/midnightntwrk/midnight-ledger", package = "midnight-zswap", tag = "ledger-6.1.0-alpha.3" }
midnight-node-ledger = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-ledger", tag = "node-0.17.0-rc.4" }
midnight-node-ledger-helpers = { git = "https://github.com/midnightntwrk/midnight-node", package = "midnight-node-ledger-helpers", tag = "node-0.17.0-rc.4" }
oz-keystore = "0.1.4"
prometheus = "0.14"
pulldown-cmark = "0.13.0"
regex = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = { version = "0.4.1", features = ["json"] }
reqwest-retry = "0.7.0"
rust_decimal = "1.37.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
soroban-spec = "23.0.2"
stellar-rpc-client = "23.0.1"
stellar-strkey = "0.0.13"
subxt = "0.42.1"
stellar-xdr = "23.0.0"
sysinfo = "0.34.2"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1.3"
uuid = "1.15.0"
winnow = "0.7.9"
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
cargo-llvm-cov = "0.6"
frame-metadata = "23.0.0"
mockall = "0.13.1"
mockito = "1.6.1"
once_cell = "1.20.0"
parity-scale-codec = "3.7.5"
proptest = "1.6.0"
rand = "0.9.0"
scale-decode = "0.16.0"
scale-encode = "0.10.0"
scale-info = "2.11.6"
tempfile = "3.2"
tracing-test = "0.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "openzeppelin-monitor"

[features]
test-ci-only = []
fuzzing = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
